--- a/src/Weather.css
+++ b/src/Weather.css
@@ -17,23 +17,32 @@
 }
 
 .Weather .icon {
+  display: inline-flex;
   width: 150px;
+  position: relative;
+  bottom: 20px;
 }
 
 .Weather .temperature {
-  font-size: 76px;
-  padding: 30px 5px 0 10px;
-  position: relative;
-  top: 20px;
+  font-size: 70px;
+  font-weight: 500;
 }
 
-.Weather .temp-main {
+.Weather .units-main {
   font-size: 22px;
   position: relative;
-  bottom: 20px;
-  right: 3px;
+  bottom: 36px;
 }
 
 .Weather a {
   text-decoration: none;
+}
+
+.Weather ul {
+  margin: 20px 0 0;
+  padding: 0;
+}
+
+.Weather li {
+  list-style: none;
 }
